# flask-blog

./: README.md  main.py  pyproject.toml
templates/: dashboard.html  index.html
