[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = "Blogging Website Demo in Flask"
authors = ["Kamal Kumar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
